<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteTwo"
    android:layout_marginBottom="10dp">



    <ImageView
        android:id="@+id/img_view_bookmark"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="4dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/ic_action_bookmark"
        android:contentDescription="@string/bookmark_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@id/img_view_bookmark"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        tools:text="Question"
        android:textColor="@color/charcoalGrey"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_question"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/tv_posted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"
            android:text="@string/posted_by"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/silverTwo"/>

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            tools:text="Oladele Abeeb"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:textSize="14sp"
            android:textColor="@color/coolGrey"/>

        <TextView
            android:id="@+id/tv_commented_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:text="@string/commented_by"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/silverTwo"/>

        <include
            layout="@layout/layout_commentators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="3dp">

        </include>

    </LinearLayout>

    <Button
        android:id="@+id/btn_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:minWidth="50dp"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/layout_comment"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/emoji_background"
        android:textSize="14sp"
        android:textColor="@color/coolGrey"
        android:text="@string/zero" />



    <Button
        android:id="@+id/btn_curious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:minWidth="50dp"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/emoji_background"
        android:text="@string/zero"
        android:layout_toEndOf="@id/btn_happy"
        android:layout_below="@id/layout_comment"
        android:textSize="14sp"
        android:textColor="@color/coolGrey" />

    <Button
        android:id="@+id/btn_crying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:minWidth="50dp"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/emoji_background"
        android:text="@string/zero"
        android:layout_toEndOf="@id/btn_curious"
        android:layout_below="@id/layout_comment"
        android:textSize="14sp"
        android:textColor="@color/coolGrey"/>

    <Button
        android:id="@+id/btn_offended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:minWidth="50dp"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/emoji_background"
        android:text="@string/zero"
        android:layout_toEndOf="@id/btn_crying"
        android:layout_below="@id/layout_comment"
        android:textSize="14sp"
        android:textColor="@color/coolGrey"/>


    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/silver"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/btn_curious"/>


    <LinearLayout
        android:id="@+id/layout_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_below="@id/view_divider"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_action_report"
            android:layout_margin="4dp"
            android:tint="@color/coolGrey"
            android:contentDescription="@string/report"/>

        <TextView
            android:id="@+id/tv_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:paddingTop="4dp"
            android:textColor="@color/coolGrey"
            android:textSize="14sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:layout_below="@id/view_divider"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_action_share"
            android:layout_margin="4dp"
            android:contentDescription="@string/share"
            android:tint="@color/coolGrey"/>

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:paddingTop="4dp"
            android:textSize="16sp"
            android:textColor="@color/coolGrey"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_below="@id/view_divider"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:textColor="@color/coolGrey" />


</RelativeLayout>